# AnimatedDrawing

./: .gitignore  README.md  live_demo.py  main.py  mediapipe_test.py  pyproject.toml  render_script.py
animated_drawings/: config.py  mvc_base_cfg.yaml  utils.py
animated_drawings/controller/: video_render_controller.py
animated_drawings/controller_live/: controller.py  interactive_controller.py  video_render_controller.py
animated_drawings/model/: animated_drawing.py  retargeter.py  scene.py
animated_drawings/model_live/: animated_drawing.py  box.py  bvh.py  camera.py  floor.py  joint.py  quaternions.py  rectangle.py  retargeter.py  scene.py  transform.py  transform_widget.py
animated_drawings/view/: window_view.py
drawings/characters/robot/: bounding_box.yaml  char_cfg.yaml
drawings/config/mvc/: live_demo.yaml  multiple.yaml
examples/: image_to_annotations.py
pipeline/: pipepline.sh
scripts/: image_to_annotations.py  live_demo.py  pipepline.sh  utils.py
torchserve/: animated.def  config.local.properties  config.properties
