[project]
name = "animateddrawings"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.8.18"
dependencies = [
        'numpy==1.24.4',
        'scipy==1.10.0',
        'scikit-image==0.19.3',
        'scikit-learn==1.1.2',
        'shapely==1.8.5.post1',
        'opencv-python==4.6.0.66',
        'Pillow==10.1.0',
        'glfw==2.5.5',
        'PyOpenGL==3.1.6',
        'PyYAML==6.0.1',
        'requests==2.31.0',
        'torchserve==0.7.0',
        'tqdm==4.66.3',
        'Flask==2.3.2',
        "setuptools>=75.3.2",
        "nvgpu>=0.10.0",
        "torch>=2.4.1",
        "h5py>=3.11.0",
        "torchvision>=0.19.1",
        "matplotlib>=3.7.5",
        "mediapipe>=0.10.11",
        "pygame>=2.6.1",
]
[tool.setuptools]
packages = ['animated_drawings',"scripts"]
